--- a/apptimus.html
+++ b/apptimus.html
@@ -16,20 +16,21 @@
       <input type="text" id="img" name="IMG"><br>
       <label for="lname">Redirect img link</label><br>
       <input type="text" id="link" name="Link"><br><br>
-      <button id="btn" type="button">
+      <button class="button" id="btn" type="button">
         Submit
       </button>
+        <button class="button" onclick="saveLocalStorage()">
+      Save
+    </button>
     </form>
     </div>
     <a id="link-out-put">
-      <img id="img-out-put" src="" alt="img" width="320" height="320">
+      <img id="img-out-put" src="" alt="upload img" width="320" height="320">
     </a>
-    <ul id="banners-list"></ul>
-    <button class="button" onclick="saveLocalStorage()">
-      Save
-    </button>
+ 
+    <div id="banners-list"></div>
     <button class="button" onclick="clearLocalStorage()">
-      Delete all data
+      Clear
     </button>
     </div>
   </body>
